[tool.poetry]
name = "seatcret"
version = "0.1.0"
description = ""
authors = ["Seo Jihyeok <limeburst@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^4.2.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
