[tool.poetry]
name = "seatcret"
version = "0.1.0"
description = ""
authors = ["Seo Jihyeok <limeburst@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
firebase-admin = "^4.2.0"
Flask = "^1.1.2"
segno = "^1.0.0"
redis = "^3.5.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
python-dotenv = "^0.13.0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"